# stealth-chat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
certs/: gen-pair.sh
src/: ansi.py  app.py  config.py  run.py
src/client/: __main__.py  alert_system.py  ansi.py  client.py  command_processor.py  connection_handler.py  message_formatter.py  message_model.py  requirements.txt
src/client/application/: __init__.py  client_service.py  command_processor.py  connection_service.py
src/client/domain/: __init__.py  client.py  command.py  connection.py
src/client/infrastructure/: client_service.py  command_processor.py  connection_service.py
src/client/models/: __init__.py  client.py  client_event.py  connection.py  message.py
src/client/presentation/: message_renderer.py
src/client/services/: client_service.py  connection_service.py
src/client/utils/: __init__.py  alert_system.py  ansi_colors.py  message_utils.py
src/commons/abstracts/: event.py
src/commons/interfaces/: __init__.py  event_listener.py
src/commons/services/: event_manager.py
src/server/: Dockerfile  README.md  __main__.py  config.py  events.py  server.py
src/server/application/: connection_manager.py
src/server/enums/: events.py
src/server/interfaces/: event_listener.py
src/server/managers/: connection_manager.py  event_manager.py
src/server/models/: __init__.py  client_connection.py  server_event.py
