[tool.poetry]
name = "cli-socket-chat"
version = "0.1.1"
description = "chat implementation using python socket library"
authors = ["Carlos Manuel Fernández Perez <klyman047@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">3.9.1"
pyreadline = { version = "~2.0", markers = "sys_platform == 'win32'" }
cryptography = "~44.0.0"

[tool.poetry.scripts]
start = "run:main"

[tool.poetry.urls]
repository = "https://github.com/duckraper/cli-socket-chat"
"Issues" = "https://github.com/duckraper/cli-socket-chat/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
